--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.facebook.fresco:fresco:0.5.0+'
+//    compile 'com.facebook.fresco:fresco:0.5.0+'
     compile files('libs/universal-image-loader-1.9.3-with-sources.jar')
 }
