--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity android:name=".MainActivity"
             android:screenOrientation="portrait"/>
 
+        <activity android:name=".MoreImageActivity"
+            android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
